--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -12,12 +12,10 @@
         <ImageView
             android:id="@+id/image_item"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="80dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:scaleType="centerCrop"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             />
 
         <RelativeLayout
