--- a/app/src/main/res/layout/tab_item.xml
+++ b/app/src/main/res/layout/tab_item.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
+              android:layout_marginTop="5dp"
               android:orientation="horizontal">
 
 
@@ -13,6 +14,7 @@
         android:layout_weight="1"
         android:clickable="true"
         android:gravity="center"
+        android:layout_marginLeft="10dp"
         android:orientation="vertical">
 
         <ImageButton
